 * Site settings are now identifiable/cachable by request as well as site (Andy Babic)
 * Added `select_related` attribute to site settings to enable more efficient fetching of foreign key values (Andy Babic)
 * Add caching of image renditions (Tom Dyson, Tim Kamanin)
 * Add documentation for reporting security issues (Matt Westcott)
 * Fix: Added ARIA alert role to live search forms in the admin (Casper Timmers)
 * Fix: Reorder login form elements to match expected tab order (Kjartan Sverrisson)
 * Fix: Re-add 'Close Explorer' button on mobile viewports (Sævar Öfjörð Magnússon)
 * Fix: Add a more descriptive label to Password reset link for screen reader users (Casper Timmers, Martin Coote)
 * Fix: Improve Wagtail logo contrast by adding a background (Brian Edelman, Simon Evans, Ben Enright)
 * Fix: Prevent duplicate notification messages on page locking (Jacob Topp-Mugglestone)
 * Fix: Fix InlinePanel item non field errors not visible (Storm Heg)
 * Fix: `{% image ... as var %}` now clears the context variable when passed None as an image (Maylon Pedroso)
 * Fix: `refresh_index` method on Elasticsearch no longer fails (Lars van de Kerkhof)
 * Fix: Document tags no longer fail to update when replacing the document file at the same time (Matt Westcott)
 * Fix: Prevent error from very tall / wide images being resized to 0 pixels (Fidel Ramos)
 * Fix: Remove excess margin when editing snippets (Quadric)
 * Fix: Added `scope` attribute to table headers in TableBlock output (Quadric)
 * Fix: Prevent KeyError when accessing a StreamField on a deferred queryset (Paulo Alvarado)
 * Fix: Hide empty 'view live' links (Karran Besen)
 * Fix: Mark up a few strings for translation (Luiz Boaretto)
 * Fix: Invalid focal_point attribute on image edit view (Michał (Quadric) Sieradzki)
 * Fix: No longer expose the `.delete()` method on the default Page.objects manager (Nick Smith)